tests/NormalTests/paczka1/fuzzy1/72809298.err
Error in line 6: A306 S483 35,2
Error in line 8: ToWo S88 98,0
Error in line 9: A306 S88 92,4
Error in line 29: ivfWD0U S88 23,79
Error in line 32: A306 S88 33,5
